# controllers/ServerService.js
@@ -21,11 +21,10 @@ exports.clearMonitoredItems = function(args, res, next) {
 exports.connectServer = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * url (String)
-  * reconnect (Boolean)
+  * body (ServerConnection)
   **/
     var examples = {};
-  examples['application/json'] = { };
+  examples['application/json'] = "{}";
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
